2013-02-21  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Change a
	useless macro of internal event commands

	* include/functions_graph.php
	include/functions_events.php
	operation/agentes/estado_generalagente.php: Improve the layout
	of the agent detail view

2013-02-21  Sergio Martin <sergio.martin@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	godmode/alerts/configure_alert_action.php
	godmode/alerts/alert_commands.php: Update the commands data
	to new alerts macro in migration. Hide the not used fields
	on actions. bug #3605461

2013-02-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	operation/agentes/estado_generalagente.php: Fixed
	events slicebar legend and added modules statistics under
	modules status pie

2013-02-20  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_snmp_browser.php: Treat :: as a separator inside
	  translated OIDs. Removed calls to html_print_image (very slow!) in
	  snmp_browser_print_tree.

2013-02-20  Sancho Lerena <slerena@artica.es>

	* include/functions_snmp_browser.php: Change icon and way to
	split into branches (using :: and .).

2013-02-20  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_monitores.php: Fixed search filter
	on monitor list

2013-02-20  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_generalagente.php: Remodelate 
	the agent detail view (code and interface) to adopt
	new styles in a close future

2013-02-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/functions_flot.php
	include/graphs/flot/pandora.flot.js