@@ -361,21 +361,6 @@ echo "</form>"; //This is the filter div
 
 echo "</div>";
 
-$params = array();
-$params['position'] = 'right';
-$params['icon_closed'] = 'images/setup.png';
-$params['body_text'] = '<b>' . __('Events graph by agent') . '</b>';
-$params['body_text'] .= grafico_eventos_grupo(350, 248, rawurlencode ($sql_post), $meta, $history);
-$params['icon_closed'] = '/images/chart_curve';
-$params['icon_open'] = '/images/chart_curve';
-$params['height'] = '250px';
-$params['top'] = 'auto_below';
-$params['autotop'] = 'menu_tab_frame_view';
-$params['icon_width'] = 16;
-$params['icon_height'] = 16;
-
-html_print_side_layer($params);
-
 $event_table = events_get_events_table($meta, $history);
 
 if ($group_rep == 0) {
@@ -409,6 +394,23 @@ if ($group_rep == 0) {
 }
 else {
 	$result = events_get_events_grouped($sql_post, $offset, $pagination, $meta, $history);
+}
+
+if(!empty($result)) {
+	$params = array();
+	$params['position'] = 'right';
+	$params['icon_closed'] = 'images/setup.png';
+	$params['body_text'] = '<b>' . __('Events graph by agent') . '</b>';
+	$params['body_text'] .= grafico_eventos_grupo(350, 248, rawurlencode ($sql_post), $meta, $history);
+	$params['icon_closed'] = '/images/chart_curve.png';
+	$params['icon_open'] = '/images/chart_curve.png';
+	$params['height'] = '250px';
+	$params['top'] = 'auto_below';
+	$params['autotop'] = 'menu_tab_frame_view';
+	$params['icon_width'] = 16;
+	$params['icon_height'] = 16;
+
+	html_print_side_layer($params);
 }
 
 // Delete rnum field generated by oracle_recode_query() function
